<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springdata</groupId>
	<artifactId>spring-data-cassandra-parent</artifactId>
	<version>1.2.0.BUILD-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Spring Data Cassandra Parent</name>
	<description>Cassandra support for Spring Data</description>
	<url>http://www.springdata.org/cassandra</url>

	<licenses>
	  <license>
	    <name>The Apache Software License, Version 2.0</name>
	    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
	    <distribution>repo</distribution>
	  </license>
	</licenses>
	
	<scm>
	  <url>https://github.com/SpringData/spring-data-cassandra</url>
	  <connection>scm:git:git@github.com:SpringData/spring-data-cassandra.git</connection>
	  <developerConnection>scm:git:git@github.com:SpringData/spring-data-cassandra.git</developerConnection>
	</scm>	  
    
    <issueManagement>
      <system>GitHub</system>
      <url>https://github.com/SpringData/spring-data-cassandra/issues</url>
    </issueManagement>	  
	  
	<parent>
	  <groupId>org.sonatype.oss</groupId>
	  <artifactId>oss-parent</artifactId>
	  <version>7</version>
	</parent>

	<modules>
		<module>cassandra-cql</module>
		<module>cassandra</module>
	</modules>

	<properties>
		<project.type>multi</project.type>
		<dist.id>spring-data-cassandra</dist.id>
		<springdata.commons>1.6.2.RELEASE</springdata.commons>
		<cassandra-unit.version>1.2.0.1</cassandra-unit.version>
		<cassandra-driver-core.version>1.0.4-dse</cassandra-driver-core.version>
		<failsafe.version>2.16</failsafe.version>
		<guava.version>14.0.1</guava.version>
		
		<apt>1.1.0</apt>
		<aspectj>1.7.2</aspectj>
		<cdi>1.0</cdi>
		<hamcrest>1.3</hamcrest>
		<jodatime>2.1</jodatime>
		<junit>4.11</junit>
		<logback>1.0.11</logback>
		<mockito>1.9.5</mockito>
		<querydsl>3.2.3</querydsl>
		<slf4j>1.7.1</slf4j>
		<spring>3.1.4.RELEASE</spring>
		<spring30>3.0.7.RELEASE</spring30>
		<webbeans>1.1.7</webbeans>
	</properties>

	<developers>
		<developer>
			<id>ashvid</id>
			<name>Alex Shvid</name>
			<email>a at shvid.com</email>
			<roles>
			    <role>Project Lead</role>
				<role>Developer</role>
			</roles>
			<timezone>-8</timezone>
		</developer>		
	</developers>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>spring-cassandra-cql</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.datastax.cassandra</groupId>
				<artifactId>cassandra-driver-core</artifactId>
				<version>${cassandra-driver-core.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>slf4j-log4j12</artifactId>
						<groupId>org.slf4j</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
            
			<!-- Spring -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-expression</artifactId>
				<version>${spring}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.4</version>
			</dependency>

			<!-- CDI -->
			<dependency>
				<groupId>javax.enterprise</groupId>
				<artifactId>cdi-api</artifactId>
				<version>${cdi}</version>
				<scope>provided</scope>
				<optional>true</optional>
			</dependency>

			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib-nodep</artifactId>
				<version>2.2.2</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.xerial.snappy</groupId>
				<artifactId>snappy-java</artifactId>
				<version>1.1.0.1</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-mapper-asl</artifactId>
				<version>1.9.13</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-core-asl</artifactId>
				<version>1.9.13</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.cassandraunit</groupId>
				<artifactId>cassandra-unit</artifactId>
				<version>${cassandra-unit.version}</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<artifactId>cassandra-all</artifactId>
						<groupId>org.apache.cassandra</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.cassandraunit</groupId>
				<artifactId>cassandra-unit-spring</artifactId>
				<version>${cassandra-unit.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>javax.el</groupId>
				<artifactId>el-api</artifactId>
				<version>${cdi}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>4.2.0.Final</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>${jodatime}</version>
				<scope>test</scope>
			</dependency>
			
		</dependencies>
	</dependencyManagement>

	<dependencies>
	
		<!-- Test -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>${hamcrest}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>${hamcrest}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring}</version>
			<scope>test</scope>
		</dependency>
		
		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j}</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback}</version>
			<scope>test</scope>
		</dependency>				

	</dependencies>

	<repositories>
		<repository>
			<id>spring-lib-release</id>
			<url>http://repo.springsource.org/libs-release-local</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>		
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<wtpversion>2.0</wtpversion>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.8</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
			    	<argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
					<parallel>methods</parallel>
					<threadCount>10</threadCount>
					<useFile>false</useFile>
					<includes>
						<include>**/test/unit/**/*.java</include>
					</includes>
					<excludes>
						<exclude>**/test/integration/**/*.java</exclude>
						<exclude>**/test/performance/**/*.java</exclude>
					</excludes>
					<systemPropertyVariables>
						<java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${failsafe.version}</version>
				<configuration>
				    <forkMode>always</forkMode>
				    <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
					<useFile>false</useFile>
					<includes>
						<include>**/test/integration/**/*.java</include>
					</includes>
					<excludes>
						<exclude>**/test/unit/**/*.java</exclude>
						<exclude>**/test/performance/**/*.java</exclude>
					</excludes>
					<systemPropertyVariables>
						<java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
					</systemPropertyVariables>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
